[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Combat/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Enemies/Goblin.gd" type="Script" id=2]

[node name="Goblin" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 1 )]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[node name="MonitoringTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_entered" from="Notifier" to="." method="on_screen_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="_on_screen_exited"]
[connection signal="timeout" from="MonitoringTimer" to="." method="on_MonitoringTimer_timeout"]
